--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,18 @@
     </div>
 </footer>
 
+{% if site.theme.google_analytics %}
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', '{{ site.theme.google_analytics }}', 'auto');
+ga('send', 'pageview');
+</script>
+{% endif %}
+
 <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/js/skel.min.js"></script>
