--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,11 +16,27 @@
     <meta property="og:type" content="Website"/>
     <meta property="og:description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme.facebookDescription|raw }}{% endif %}"/>
     <meta property="og:url" content="{% if page.resume %}{{ page.url| prepend: site.url }}{% else %} {{ site.url }} {% endif %}"/>
-    <noscript>
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
-    </noscript>
+
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
+    {% if site.theme.google_analytics %}
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '{{ site.theme.google_analytics }}', 'auto');
+    ga('send', 'pageview');
+    </script>
+    {% endif %}
+
+    <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+    <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/js/skel.min.js"></script>
+    <script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
+    <script src="{{ site.baseurl }}/js/init.js"></script>
     {% if site.theme.katex %}
     <link rel="stylesheet" href="{{ "/css/katex.min.css" | prepend: site.baseurl }}" />
     <script src="{{ "/js/katex.min.js" | prepend: site.baseurl }}"></script>
