--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav id="nav">
         <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/about">About</a></li>
+            <li><a href="{{ site.baseurl }}/about.html">About</a></li>
         </ul>
     </nav>
 </header>
