--- a/css/style.css
+++ b/css/style.css
@@ -637,13 +637,13 @@ table {
 }
 
 table tbody tr {
-	border: solid 1px rgba(144, 144, 144, 0.25);
+	/*border: solid 1px rgba(144, 144, 144, 0.25);*/
 	border-left: 0;
 	border-right: 0;
 }
 
 table tbody tr:nth-child(2n + 1) {
-	background-color: rgba(144, 144, 144, 0.075);
+	/*background-color: rgba(144, 144, 144, 0.075);*/
 }
 
 table td {
@@ -1110,4 +1110,10 @@ input[type="button"]:disabled,
 
 .center{
 	text-align: center;
+}
+
+.space{
+	width: 100%;
+	height: 30px;
+	float: left;
 }
