--- a/css/style.css
+++ b/css/style.css
@@ -1112,6 +1112,12 @@ input[type="button"]:disabled,
 	text-align: center;
 }
 
+@media (max-width: 700px) {
+	.center img{
+		width: 90%;
+	}
+}
+
 .space{
 	width: 100%;
 	height: 30px;
