--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -10,7 +10,7 @@
     <section id="banner">
         <div class="inner">
 
-            <img src="{{ site.theme.image_home }}" class="img-main">
+            <img src="{{ site.theme.image_home }}" style="width:249px;" class="img-main">
 
             {{ site.theme.header_text }}
         </div>
