--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,33 +1,33 @@
 <head>
-    <title>{% if page.title %}{{ site.theme.title }} | {{ page.title }}{% else %}{{ site.theme.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ site.theme_settings.title }} | {{ page.title }}{% else %}{{ site.theme_settings.title }}{% endif %}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme.description }}{% endif %}">
-    <meta name="keywords" content="{% if site.theme.keywords %} {{ site.theme.keywords }} {% endif %}"/>
+    <meta name="description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme_settings.description }}{% endif %}">
+    <meta name="keywords" content="{% if site.theme_settings.keywords %} {{ site.theme_settings.keywords }} {% endif %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta name="viewport" content="width=device-width">
     <meta name="Googlebot" content="all"/>
     <meta name="Robots" content="index,follow"/>
-    <meta name="author" content="{% if site.theme.autor %} {{ site.theme.autor }} {% endif %}"/>
-    <meta name="reply-to" content="{% if site.theme.reply %} {{ site.theme.reply }} {% endif %}"/>
+    <meta name="author" content="{% if site.theme_settings.autor %} {{ site.theme_settings.autor }} {% endif %}"/>
+    <meta name="reply-to" content="{% if site.theme_settings.reply %} {{ site.theme_settings.reply }} {% endif %}"/>
     <meta property="og:image" content="{{ "/img/facebook.png" | prepend: site.url }}"/>
     <link rel="image_src" href="{{ "/img/facebook.png" | prepend: site.url }}"/>
-    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.theme.facebookTitle }}{% endif %}"/>
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.theme_settings.facebookTitle }}{% endif %}"/>
     <meta property="og:type" content="Website"/>
-    <meta property="og:description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme.facebookDescription|raw }}{% endif %}"/>
+    <meta property="og:description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme_settings.facebookDescription|raw }}{% endif %}"/>
     <meta property="og:url" content="{% if page.resume %}{{ page.url| prepend: site.url }}{% else %} {{ site.url }} {% endif %}"/>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
-    {% if site.theme.google_analytics %}
+    {% if site.theme_settings.google_analytics %}
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '{{ site.theme.google_analytics }}', 'auto');
+    ga('create', '{{ site.theme_settings.google_analytics }}', 'auto');
     ga('send', 'pageview');
     </script>
     {% endif %}
@@ -37,7 +37,7 @@
     <script src="{{ site.baseurl }}/js/skel.min.js"></script>
     <script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
     <script src="{{ site.baseurl }}/js/init.js"></script>
-    {% if site.theme.katex %}
+    {% if site.theme_settings.katex %}
     <link rel="stylesheet" href="{{ "/css/katex.min.css" | prepend: site.baseurl }}" />
     <script src="{{ "/js/katex.min.js" | prepend: site.baseurl }}"></script>
     {% endif %}
