--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -10,9 +10,9 @@
     <section id="banner">
         <div class="inner">
 
-            <img src="{{ site.theme.image_home }}" style="width:249px;" class="img-main">
+            <img src="{{ site.theme_settings.image_home }}" style="width:249px;" class="img-main">
 
-            {{ site.theme.header_text }}
+            {{ site.theme_settings.header_text }}
         </div>
     </section>
 
