--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 
         <br/>
 
-        {% if site.theme.disqus_shortname and page.comments == true %}
+        {% if site.theme_settings.disqus_shortname and page.comments == true %}
         <div class="comments">
             {% include disqus.html %}
         </div>
