--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,8 @@
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.theme_settings.facebookTitle }}{% endif %}"/>
     <meta property="og:type" content="Website"/>
     <meta property="og:description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme_settings.facebookDescription|raw }}{% endif %}"/>
-    <meta property="og:url" content="{% if page.resume %}{{ page.url| prepend: site.url }}{% else %} {{ site.url }} {% endif %}"/>
-
+    <meta property="og:url" content="{% if page.resume %}{{ page.url| prepend: site.url }}{% else %}{{ site.url }}{% endif %}"/>
+    <link rel="canonical" href="{% if page.resume %}{{ page.url| prepend: site.url }}{% else %}{{ site.url }}{% endif %}">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
