--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
 <footer id="footer">
     <div class="container">
-        <p>
-            "Every day I remind myself that my inner and outer life are based on the labors of other men, living and dead, and that I must exert myself in order to give in the same measure as I have received and am still receiving." (Albert Einstein).
-        </p>
 
         <ul class="icons">
             <li><a href="{{ site.theme_settings.linkedin }}" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -17,7 +14,7 @@
             </li>
 
             <li>
-                Email: <a href="mailto: {{ site.theme_settings.email }}">{{ site.theme_settings.email }}</a>
+                E-mail: <a href="mailto: {{ site.theme_settings.email }}">{{ site.theme_settings.email }}</a>
             </li>
 
             <li>
