--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -12,6 +12,13 @@
 
             <img src="{{ site.theme_settings.image_home }}" style="width:249px;" class="img-main">
 
+            <ul class="icons" style="margin-top: 35px;">
+                <li><a href="{{ site.theme_settings.linkedin }}" style="color: #FFF;" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/{{ site.theme_settings.github }}" style="color: #FFF;" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+                <li><a href="https://twitter.com/{{ site.theme_settings.twitter }}" style="color: #FFF;" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/{{ site.theme_settings.facebook }}" style="color: #FFF;" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+            </ul>
+
             {{ site.theme_settings.header_text }}
         </div>
     </section>
