--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,9 @@
 <head>
+    <script>
+    if (location.protocol != 'https:') {
+        location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+    }
+    </script>
     <title>{% if page.title %}{{ site.theme_settings.title }} | {{ page.title }}{% else %}{{ site.theme_settings.title }}{% endif %}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="{% if page.resume %}{{ page.resume | strip_html | strip_newlines }}{% else %}{{ site.theme_settings.description }}{% endif %}">
