--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,8 @@
-<section class="disqus">
-    <div id="disqus_thread"></div>
+<!--  Don't edit anything here. Set your disqus id in _config.yml -->
+
+<div id="comments" class="mt-5">
+    <div id="disqus_thread">
+    </div>
     <script type="text/javascript">
         var disqus_shortname = '{{site.disqus}}'; 
         var disqus_developer = 0;
@@ -9,6 +12,7 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-</section>
+    <noscript>
+    Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    </noscript>
+</div>
